# material_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix.py  get_supported_shader_params.py  post_process_materials.py  query_material_anims.py
src/: app.cpp  bfres.cpp  binary_file.cpp  main.cpp  material_parser.cpp  shader.cpp
src/include/: app.h  bfres.h  bfsha.h  binary_file.h  material_parser.h  math_types.h  shader.h
